admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "validate-hc.svc.cluster.local"
webhooks:
  - name: "validate-hc.svc.cluster.local"
    admissionReviewVersions: [ "v1" ]
    sideEffects: None
#    timeoutSeconds: 5
    namespaceSelector:
     matchLabels:
       admission-webhook: enabled
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods","deployments"]
        scope: "*"
    clientConfig:
      service:
        namespace: admission-webhook
        name: validate-hc
        path: /validate
        port: 8080
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZrVENDQTNtZ0F3SUJBZ0lVRC9sZjQ0ZklTYVJJOFREYjhYV0h2Qlg3bFVjd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1dERUxNQWtHQTFVRUJoTUNVMUF4Q3pBSkJnTlZCQWdNQWxOUU1SUXdFZ1lEVlFRS0RBdFlVRWx1WXl3ZwpTVzVqTGpFbU1DUUdBMVVFQXd3ZGRtRnNhV1JoZEdVdGFHTXVjM1pqTG1Oc2RYTjBaWEl1Ykc5allXd3dIaGNOCk1qTXdNakEzTVRVek56TXlXaGNOTWpVeE1USTNNVFV6TnpNeVdqQllNUXN3Q1FZRFZRUUdFd0pUVURFTE1Ba0cKQTFVRUNBd0NVMUF4RkRBU0JnTlZCQW9NQzFoUVNXNWpMQ0JKYm1NdU1TWXdKQVlEVlFRRERCMTJZV3hwWkdGMApaUzFvWXk1emRt [...]
